add colorful triangle

--- a/src/index.css
+++ b/src/index.css
@@ -9,6 +9,11 @@ body {
   height: 100%;
 }
 
+.container {
+  margin: 0 auto;
+  width: 500px;
+}
+
 #lighterWall {
   position: fixed;
   top: 0;
@@ -18,7 +23,14 @@ body {
 }
 
 #webgl {
-  width: 100vw;
-  height: 100vh;
+  width: 300px;
+  height: 300px;
+  margin: 0 auto;
   display: block;
+}
+
+#progress {
+  display: block;
+  margin: 0 auto;
+  width: 100%;
 }
