--- a/src/index.css
+++ b/src/index.css
@@ -18,7 +18,8 @@ body {
 }
 
 #webgl {
-  width: 100vw;
-  height: 100vh;
+  /* width: 500px;
+  height: 500px; */
+  margin: 0 auto;
   display: block;
 }
